# Claude-Setup

./: .gitignore  README.md
.claude/: launch.json  settings.local.json
.claude/plugins/code-review/commands/: code-review.md
.claude/plugins/deep-trilogy/.claude-plugin/: marketplace.json  plugin.json
.claude/plugins/deep-trilogy/deep-implement/: pyproject.toml
.claude/plugins/deep-trilogy/deep-implement/.claude-plugin/: plugin.json
.claude/plugins/deep-trilogy/deep-implement/scripts/checks/: setup_implementation_session.py
.claude/plugins/deep-trilogy/deep-implement/scripts/hooks/: capture-session-id.py
.claude/plugins/deep-trilogy/deep-implement/scripts/lib/: sections.py  task_storage.py
.claude/plugins/deep-trilogy/deep-implement/skills/deep-implement/references/: code-review-protocol.md  mcp-guidance.md
.claude/plugins/deep-trilogy/deep-plan/: config.json  pyproject.toml
.claude/plugins/deep-trilogy/deep-project/: pyproject.toml
.claude/plugins/deep-trilogy/hooks/: hooks.json
.claude/plugins/security-guidance/.claude-plugin/: plugin.json
.claude/plugins/security-guidance/hooks/: security_reminder_hook.py
.github/workflows/: ci.yml
config/: .eslintrc.json  .gitignore  security-headers.ts
fixtures/: sample_products.json  sample_users.json
knowledge/: preferences.md  project.md  security.md  tech_stack.md  ui_ux_principles.md
prompts/: SKILL.md  code_review.md  deploy.md
scripts/: setup.sh
templates/: api-route.ts  component.tsx  middleware.ts  page.tsx  schema.prisma
workflows/: ci.yml
(+42 files in other folders)
